新增华氏度

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/Theme.MyWeather">
         <activity
             android:name=".ui.weather.WeatherActivity"
-            android:exported="false" />
+            android:exported="true"
+            android:enabled="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
